--- a/config/ws_client.properties
+++ b/config/ws_client.properties
@@ -19,6 +19,6 @@ webservices_password = 63c5BtYDNAPANvNqAkh9quYszwVrvLaruxmzvM4P1FSw
 webservices_reader_user = RESTAPIACCESSREADER
 webservices_reader_password = 3cJsPwX1Ju1kzT2wBnqh5ML43MHYxUwVN18yVw3mccZs
 credentials.encryption.enabled = true
-foundation_rest_url = http://localhost:8080/api
+foundation_rest_url = http://host.docker.internal:8080/api
 webservices.acct.lastupdate.timestamp = 06/05/2018 17:45:59 PM
 webservices.reader.acct.lastupdate.timestamp = 06/05/2018 17:46:00 PM
