GROUNDWORK: use Apache suexec to run CGIs as nagios user.

--- a/etc/monarch.conf
+++ b/etc/monarch.conf
@@ -3,6 +3,7 @@
 #
 
 # cgi-bin
+SuexecUserGroup nagios nagios
 ScriptAlias "/monarch/cgi-bin/" "/usr/local/groundwork/monarch/cgi-bin/monarch/"
 <Directory "/usr/local/groundwork/monarch/cgi-bin/monarch">
     Options ExecCGI
