--- a/config/db.properties
+++ b/config/db.properties
@@ -8,14 +8,14 @@
 global.db.type=postgresql
 
 # Monarch Datasource:
-monarch.dbhost=host.docker.internal
+monarch.dbhost=localhost
 monarch.database=monarch
 monarch.username=monarch
 monarch.password=gwrk
 
 # Collage Datasource:
-collage.url=jdbc:postgresql://host.docker.internal:5432/gwcollagedb?prepareThreshold=1
+collage.url=jdbc:postgresql://localhost:5432/gwcollagedb?prepareThreshold=1
 collage.username=collage
 collage.password=gwrk
 collage.database=gwcollagedb
-collage.dbhost=host.docker.internal
+collage.dbhost=localhost
